--- a/src/assets/scss/global/variables.scss
+++ b/src/assets/scss/global/variables.scss
@@ -1,6 +1,7 @@
 // Custom Variables //
 $primaryFont: 'Helvetica';
-$secondaryFont: 'GE-SS';
+$secondaryFont: 'Helvetica';
+//$secondaryFont: 'GE-SS';
 
 
 // Set Colors
