--- a/src/assets/scss/global/global.scss
+++ b/src/assets/scss/global/global.scss
@@ -1,11 +1,11 @@
 html {
   font-family: $primaryFont;
-  color: $black;
+  color: $secondaryColor;
   background: $white;
   font-weight: 300;
   height: 100%;
   line-height: 1.4;
-  background-color: #fafbfe;
+  background-color: #fff;
   direction: ltr;
   width: 100%;
   font-size: 0.8333333333vw;
@@ -102,11 +102,11 @@ img {
   max-width: 100%;
   width: 100%;
   height: 100%;
-  padding: 0 5rem;
+  padding: 0 1rem;
   margin: 0 auto;
 
   @media #{$vpMobile600} {
-    padding: 0 1.5rem;
+    padding: 0 1rem;
     &--left {
       padding-left: 1.5rem;
     }
@@ -128,7 +128,7 @@ img {
 a {
   text-decoration: none !important;
   outline: none !important;
-  color: $white;
+  color: $secondaryColor;
   transition: all 0.35s ease;
 
   &:hover {
@@ -353,6 +353,10 @@ a {
 
   &-50 {
     margin-bottom: 50px;
+  }
+
+  &-5 {
+    margin-bottom: 5rem;
   }
 }
 
