--- a/src/assets/scss/global/typography.scss
+++ b/src/assets/scss/global/typography.scss
@@ -1,10 +1,11 @@
 
 h1,
 .heading1 {
-  font-size: 6.25rem;
+  font-size: 10.67rem;
   line-height: 1.1; // in ar design its 1.2
   /*rtl:raw:line-height: 1.3; */
-  font-weight: 300;
+  font-weight: 900;
+  margin: 0 0 1rem;
 
   @media #{$vpMobile600} {
     font-size: 3rem;
@@ -80,9 +81,9 @@ h5,
 }
 
 .body1 {
-	font-size: 1.25rem;
-	line-height: 1.4;
-	font-weight: 300;
+	font-size: 4.25rem;
+	line-height: 1;
+	font-weight: 900;
   font-family: $secondaryFont;
 	/*rtl:raw:line-height: 1.6; */
 	@media #{$vpMobile600} {
@@ -95,9 +96,9 @@ h5,
 }
 
 .body2 {
-  font-size: 1.125rem;
+  font-size: 2rem;
   line-height: 1.4;
-  font-weight: 300;
+  font-weight: 900;
   font-family: $secondaryFont;
 
   /*rtl:raw:line-height: 1.6; */
@@ -111,10 +112,10 @@ h5,
   }
 }
 .body3 {
-	font-size: 1rem;
-	line-height: 1.4;
-	font-weight: 300;
-  font-family: $secondaryFont;
+    font-size: 1.2rem;
+    text-shadow: 0.025rem 0.025rem $secondaryColor;
+    line-height: 1.4;
+    font-family: $secondaryFont;
 	/*rtl:raw:line-height: 1.6; */
 
 	&.white {
@@ -129,9 +130,10 @@ h5,
 }
 
 .body4 {
-  font-size: 0.88rem;
+  font-size: 0.71rem;
   line-height: 1.4;
-  font-weight: 300;
+  //font-weight: 300;
+  text-shadow: 0.015rem 0 $secondaryColor;
   font-family: $secondaryFont;
 
   /*rtl:raw:line-height: 1.6; */
