--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -20,3 +20,7 @@
 
 // porfolio page
 @import 'components/portfolio_header.scss';
+@import 'components/portfolio_home.scss';
+@import 'components/portfolio_intro.scss';
+@import 'components/portfolio_feedback.scss';
+@import 'components/portfolio_showcase.scss';
