--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -24,3 +24,6 @@
 @import 'components/portfolio_intro.scss';
 @import 'components/portfolio_feedback.scss';
 @import 'components/portfolio_showcase.scss';
+@import 'components/portfolio_services.scss';
+@import 'components/portfolio_blog.scss';
+@import 'components/portfolio_footer.scss';
