--- a/src/include/-footer_scripts.html
+++ b/src/include/-footer_scripts.html
@@ -47,3 +47,6 @@
 
 <!-- Font awesome -->
 <script src="https://kit.fontawesome.com/5f97178388.js" crossorigin="anonymous"></script>
+
+<!-- isotopes -->
+<!-- <script src=""></script> -->
