--- a/src/assets/scss/components/portfolio_header.scss
+++ b/src/assets/scss/components/portfolio_header.scss
@@ -1,6 +1,6 @@
 .portfolio-header {
     width: 100%;
-    padding: 1rem;
+    padding: 1rem 2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
