--- a/src/include/-head_scripts.html
+++ b/src/include/-head_scripts.html
@@ -6,6 +6,11 @@
 <link rel="manifest" href="/site.webmanifest">
 <link rel="stylesheet" href="@@baseURLMain/assets/css/@@css">
 
+<!-- swiper js -->
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
 
 <!-- <link rel="stylesheet" href="@@css"> -->
 <!-- <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?&sensor=false"></script> -->
