--- a/src/include/-portfolio-services.html
+++ b/src/include/-portfolio-services.html
@@ -19,61 +19,66 @@
         </div>
     </div>
 
-    <div class="services">
-        <div class="service">
-            <div class="image">
-                <img src="../assets/img/videography.jpg" alt="">
+    <div class="swiper">
+        <div class="services swiper-wrapper">
+            <div class="service swiper-slide">
+                <div class="image">
+                    <img src="../assets/img/videography.jpg" alt="">
+                </div>
+                <div class="text">
+                    <p class="body2">VIDEOGRAPHY</p>
+                    <p class="body3">
+                        Lorem ipsum dolor 1920px, consectetur<br>
+                        adipiscing elit, sed do eiusmod <br>
+                        tempor incididunt. 
+                    </p>
+                </div>
             </div>
-            <div class="text">
-                <p class="body2">VIDEOGRAPHY</p>
-                <p class="body3">
-                    Lorem ipsum dolor 1920px, consectetur<br>
-                    adipiscing elit, sed do eiusmod <br>
-                    tempor incididunt. 
-                </p>
+    
+            <div class="service swiper-slide">
+                <div class="image">
+                    <img src="../assets/img/motion-video.png" alt="">
+                </div>
+                <div class="text">
+                    <p class="body2">MOTION VIDEO</p>
+                    <p class="body3">
+                        Lorem ipsum dolor sit amet, consectetur<br>
+                        adipiscing elit, sed do eiusmod <br>
+                        tempor incididunt ut labore.
+                    </p>
+                </div>
+            </div>
+    
+            <div class="service swiper-slide">
+                <div class="image">
+                    <img src="../assets/img/photography.jpg" alt="">
+                </div>
+                <div class="text">
+                    <p class="body2">PHOTOGRAPHY</p>
+                    <p class="body3">
+                        Lorem ipsum dolor sit amet, consectetur<br>
+                        adipiscing elit, sed do eiusmod.
+                    </p>
+                </div>
+            </div>
+    
+            <div class="service swiper-slide">
+                <div class="image">
+                    <img src="../assets/img/light-setup.jpg" alt="">
+                </div>
+                <div class="text">
+                    <p class="body2">LIGHT SET UP</p>
+                    <p class="body3">
+                        Lorem ipsum dolor sit, consectetur<br>
+                        adipiscing elit, sed do eiusmod <br>
+                        tempor.
+                    </p>
+                </div>
             </div>
         </div>
-
-        <div class="service">
-            <div class="image">
-                <img src="../assets/img/motion-video.png" alt="">
-            </div>
-            <div class="text">
-                <p class="body2">MOTION VIDEO</p>
-                <p class="body3">
-                    Lorem ipsum dolor sit amet, consectetur<br>
-                    adipiscing elit, sed do eiusmod <br>
-                    tempor incididunt ut labore.
-                </p>
-            </div>
-        </div>
-
-        <div class="service">
-            <div class="image">
-                <img src="../assets/img/photography.jpg" alt="">
-            </div>
-            <div class="text">
-                <p class="body2">PHOTOGRAPHY</p>
-                <p class="body3">
-                    Lorem ipsum dolor sit amet, consectetur<br>
-                    adipiscing elit, sed do eiusmod.
-                </p>
-            </div>
-        </div>
-
-        <div class="service">
-            <div class="image">
-                <img src="../assets/img/light-setup.jpg" alt="">
-            </div>
-            <div class="text">
-                <p class="body2">LIGHT SET UP</p>
-                <p class="body3">
-                    Lorem ipsum dolor sit, consectetur<br>
-                    adipiscing elit, sed do eiusmod <br>
-                    tempor.
-                </p>
-            </div>
-        </div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
     </div>
+
 
 </div>
