--- a/src/include/-footer_scripts.html
+++ b/src/include/-footer_scripts.html
@@ -48,5 +48,5 @@
 <!-- Font awesome -->
 <script src="https://kit.fontawesome.com/5f97178388.js" crossorigin="anonymous"></script>
 
-<!-- isotopes -->
-<!-- <script src=""></script> -->
+<!-- swiper js -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
