--- a/src/assets/scss/components/portfolio_intro.scss
+++ b/src/assets/scss/components/portfolio_intro.scss
@@ -39,3 +39,18 @@
     }
 }
 
+@media (max-width: 600px) {
+    .portfolio-intro {
+        display: block;
+        margin-left: 10%;
+        max-width: 80%;
+
+        .heading {
+            margin-bottom: 1.5rem;
+        }
+
+        .description {
+            width: 100%;
+        }
+    }
+}
