--- a/src/assets/scss/components/portfolio_feedback.scss
+++ b/src/assets/scss/components/portfolio_feedback.scss
@@ -1,7 +1,7 @@
 .portfolio-feedback {
     
     .heading {
-        margin-bottom: 1.8rem;
+        margin-bottom: 2.5rem;
 
         .star-span {
             display: flex;
@@ -27,7 +27,7 @@
         column-gap: 1rem;
 
         .image {
-            max-width: 59%;
+            max-width: 55%;
             max-height: 40rem;
 
             img {
@@ -43,6 +43,34 @@
                 
                 p {
                     margin: 0 0 3rem;
+                }
+            }
+        }
+    }
+
+    @media (max-width: 600px) {
+        .heading {
+            margin-bottom: 1.8rem;
+            margin-left: 10%;
+        }
+
+        .content {
+            flex-wrap: wrap;
+            justify-content: center;
+
+            .image {
+                max-width: 80%;
+                margin-bottom: 2rem;
+            }
+
+            .text {
+                width: 80%;
+
+                .title {
+
+                    p {
+                        margin-bottom: 1.5rem;
+                    }
                 }
             }
         }
