--- a/src/include/-portfolio-header.html
+++ b/src/include/-portfolio-header.html
@@ -1,5 +1,6 @@
 <header class="portfolio-header">
     <div class="left-content">
+        <i class="fa-solid fa-bars"></i>
         <a  class="mr-50" href="#">Explore</a>
         <a  class="mr-50" href="#">Portfolio</a>
         <a  class="mr-50" href="#">Learn</a>
