--- a/src/include/-portfolio-showcase.html
+++ b/src/include/-portfolio-showcase.html
@@ -16,6 +16,10 @@
         <button class="p-btn inner-btn" data-filter=".food">FOOD</button>
     </div>
 
+    <div class="num-of-items body3">
+        <span class="name">Landscape</span> has <span class="num">4</span> items.
+    </div>
+
     <div class="grid">
 
         <!-- landscape elements -->
