--- a/src/assets/scss/components/portfolio_footer.scss
+++ b/src/assets/scss/components/portfolio_footer.scss
@@ -34,10 +34,11 @@
 
             @media (max-width: 600px) {
                 .address {
-                    column-gap: 0;
-                    justify-content: center;
+                    // column-gap: 0;
+                    // justify-content: center;
+                    // flex-wrap: wrap;
                     row-gap: .8rem;
-                    flex-wrap: wrap;
+                    flex-direction: column;
                 }
             }
         }
@@ -62,8 +63,7 @@
 
             @media (max-width: 600px) {
                 img {
-                    max-width: none;
-                    width: inherit;
+                    max-width: 80%;
                 }
             }
         }
@@ -88,6 +88,7 @@
         .footer-1 {
             margin-bottom: 4rem;
             flex-wrap: wrap;
+            justify-content: center;
         }
     }
 
@@ -98,6 +99,7 @@
 
         .body4 {
             font-size: 1rem;
+            font-weight: 400;
         }
     }
 
