--- a/src/assets/scss/components/portfolio_header.scss
+++ b/src/assets/scss/components/portfolio_header.scss
@@ -7,7 +7,8 @@
     background-color: #fff;
     text-transform: uppercase;
     font-size: .9rem;
-    text-shadow: .025rem 0 $secondaryColor;
+    font-weight: 600;
+    // text-shadow: .025rem 0 $secondaryColor;
 
     .left-content{
         display: flex;
@@ -19,6 +20,26 @@
         // a:not(:last-of-type) {
         //     margin-right: 2.5rem;
         // }
+
+        i {
+            display: none;
+        }
+
+        @media (max-width: 991px) {
+            a:not(:last-of-type) {
+                margin-right: 2rem;
+            }
+        }
+
+        @media (max-width: 600px){
+            a {
+                display: none;
+            }
+
+            i {
+                display: block;
+            }
+        }
     }
 
     .right-content {
@@ -39,5 +60,31 @@
         //     border-radius: 2rem;
         //     padding: .7rem 1rem;
         // }
+
+        @media (max-width: 991px) {
+            .email {
+                margin-right: 2rem;
+            }
+        }
+
+        @media (max-width: 600px) {
+            .email {
+                display: none;
+            }
+
+            .btn {
+
+                .header-btn {
+                    font-size: .5rem;
+                    padding: .5rem .7rem;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .portfolio-header {
+        padding: 1rem;
     }
 }
