--- a/src/assets/scss/components/portfolio_home.scss
+++ b/src/assets/scss/components/portfolio_home.scss
@@ -30,6 +30,12 @@
                     margin: 0;
                 }
 
+                @media (max-width: 600px) {
+                    p{
+                        padding: 0 0 .5rem .5rem;
+                    }
+                }
+
                 .newyork {
                     display: flex;
                     align-items: center;
@@ -65,6 +71,12 @@
                         .copyright {
                             font-size: .8rem;
                         }
+                    }
+                }
+
+                @media (max-width: 600px) {
+                    p {
+                        padding: 0 .5rem .5rem 0;
                     }
                 }
             }
