--- a/src/assets/scss/global/global.scss
+++ b/src/assets/scss/global/global.scss
@@ -35,6 +35,10 @@ body {
   /*rtl:raw:font-family: "HelveticaNeueLT-Arabic";*/
 }
 
+body:has(.portfolio-sidebar.open) {
+  overflow: hidden;
+}
+
 
 .sec-padded {
   padding: 12.5rem 0;
@@ -357,6 +361,12 @@ a {
 
   &-5 {
     margin-bottom: 5rem;
+  }
+
+  @media (max-width: 600px) {
+    &-5 {
+      margin-bottom: 3rem;
+    }
   }
 }
 
