--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -27,3 +27,4 @@
 @import 'components/portfolio_services.scss';
 @import 'components/portfolio_blog.scss';
 @import 'components/portfolio_footer.scss';
+@import 'components/portfolio_sidebar.scss';
