--- a/src/include/-portfolio-showcase.html
+++ b/src/include/-portfolio-showcase.html
@@ -9,7 +9,7 @@
         </span>
     </div>
     <div class="btns filter-button-group">
-        <button class="p-btn inner-btn" data-filter=".landscape">LANDSCAPE</button>
+        <button class="p-btn inner-btn active" data-filter=".landscape">LANDSCAPE</button>
         <button class="p-btn inner-btn" data-filter=".animal">ANIMALS</button>
         <button class="p-btn inner-btn" data-filter=".urban">URBAN</button>
         <button class="p-btn inner-btn" data-filter=".macro">MACRO</button>
