--- a/src/assets/scss/components/portfolio_services.scss
+++ b/src/assets/scss/components/portfolio_services.scss
@@ -78,7 +78,9 @@
                 z-index: 20;
                 height: fit-content;
                 border-radius: 50%;
-                padding: .5rem 1rem;
+                // padding: .5rem 1rem;
+                height: 2rem;
+                width: 2rem;
                 color: $white;
                 background-color: $secondaryColor;
             }
