--- a/src/assets/scss/components/portfolio_sidebar.scss
+++ b/src/assets/scss/components/portfolio_sidebar.scss
@@ -21,7 +21,7 @@
             }
         }
 
-        .item:focus {
+        .item.active {
             background-color: $secondaryColor;
             
             a {
