--- a/src/include/-portfolio-showcase.html
+++ b/src/include/-portfolio-showcase.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="num-of-items body3">
-        <span class="name">Landscape</span> has <span class="num">4</span> <span class="itms">items</span>.
+        <span class="name"></span> has <span class="num"></span> <span class="itms"></span>.
     </div>
 
     <div class="grid">
